Wed Jun 18 12:05:30 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (w_object, marshal_dump, r_object0, marshal_load): search
	  public methods only.  [ruby-core:17283]

	* object.c (convert_type): ditto.

	* lib/singleton.rb (Singleton#_dump): conversion method should be
	  public.

Wed Jun 18 10:18:11 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/etc/etc.c (etc_passwd, etc_group): fixed rdoc.  a patch from
	  okkez <okkez000 AT gmail.com> in [ruby-dev:35141].

Mon Jun 16 21:58:38 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_each, strio_readlines): IO#each and
	  IO#readlines do not affect $_.  [ruby-core:17277]

Mon Jun 16 14:46:25 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/e2mmap.rb (E2MM.def_e2message): typo.

Mon Jun 16 13:49:28 2008  Tanaka Akira  <akr@fsij.org>

	* common.mk (test-knownbug): new target for KNOWNBUGS.rb.

Mon Jun 16 11:48:47 2008  Akinori MUSHA  <knu@iDaemons.org>

	* KNOWNBUGS.rb: New file to address known bugs.

Mon Jun 16 07:14:48 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_readline, strio_each)
	  (strio_readlines): set lastline.  [ruby-core:17257]

Sat Jun 14 22:52:35 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_sysread): should not raise at empty
	  read.  a patch from Arthur Schreiber at [ruby-core:17245].

Sat Jun 14 22:16:09 2008  Akinori MUSHA  <knu@iDaemons.org>

	* configure.in: Fix $LOAD_PATH.  Properly expand vendor_ruby
	  directories; submitted by Takahiro Kambe <taca at
	  back-street.net> in [ruby-dev:35099].

Sat Jun 14 16:55:46 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_expand_path): no need to expand root path which has no
	  short file name.  [ruby-dev:35095]

Fri Jun 13 23:08:02 2008  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.xmlschema): don't accept decimal dot
	  without fractional digits.

Fri Jun 13 14:24:37 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
